Process cyclic dependencies correctly.